updated the project urls

--- a/football/templates/base.html
+++ b/football/templates/base.html
@@ -13,12 +13,12 @@
     <meta name="msapplication-navbutton-color" content="#292b2c" />
     <!-- iOS Safari -->
     <meta name="apple-mobile-web-app-status-bar-style" content="#292b2c" />
-    <title>Football updates</title>
+    <title>Football News</title>
   </head>
   <body style="background-color: seashell;">
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top" id="main-nav">
         <div class="container">
-          <a href="{% url 'home' %}" class="navbar-brand mx-auto text-warning" style="font-size: 2.0em;">Football updates</a>
+          <a href="{% url 'home' %}" class="navbar-brand mx-auto text-warning" style="font-size: 2.0em;">Football News</a>
         </div>
       </nav>
         {% block body %}
