--- a/football/templates/home.html
+++ b/football/templates/home.html
@@ -4,7 +4,7 @@
     <h2 class="text-dark text-center font-weight-bold mt-5 pt-5 mb-4" style="font-size: 2.5em;">Get Latest Football News</h2>
     <div class="row">
         {% for article in api.articles %}
-        <div class="col-lg-4 col-md-4">
+        <div class="col-md-4">
             <div class="card my-2" style="border-radius: 8px;border: 1px solid black; box-shadow: 0 1px 5px black;height: 95%;">
                 <img src="{{article.urlToImage}}" alt="{{article.source.name}}" class="card-img-top rounded">
                 <div class="card-body">
@@ -17,7 +17,7 @@
                         {% endif %}
                     </p>
                     <p class="lead text-muted font-weight-bold">{{article.publishedAt}}</p>
-                    <p class="card-text text-dark ">{{article.description | truncatechars:100}}</p>
+                    <p class="card-text text-dark ">{{article.description}}</p>
                     <p class="card-text text-dark ">{{article.content | truncatechars:100}}</p>
                     <a href="{{article.url}}" class="btn btn-danger" target="_blank">More Info &#x2799;</a>
                 </div>
