improved ui display

--- a/football/templates/base.html
+++ b/football/templates/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <!-- Bootstrap CSS -->
+    <link rel="icon" href="https://res-console.cloudinary.com/roneyjuma/thumbnails/v1/image/upload/v1626258138/b2Z5M3BlZ2s0aGtoa2h2N3k5dnY=/preview">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <!-- Chrome, Firefox OS and Opera -->
     <meta name="theme-color" content="#292b2c" />
